--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   mysql:
-    image: mysql:5.7
+    build: .
     environment:
       MYSQL_ROOT_PASSWORD: '123456'
     ports:
