add: thumb, collect, List api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,10 @@ services:
       MYSQL_ROOT_PASSWORD: '123456'
     ports:
       - '13306:3306'
-    deploy:
-      replicas: 1
+    volumes:
+      - ./dockerfiles/mysql/mycustom.cnf:/etc/mysql/conf.d/custom.cnf
   
   nginx:
     build: ./dockerfiles/nginx/
     ports:
       - '8088:80'
-    deploy:
-      replicas: 1
