--- a/dockerfiles/mysql/Dockerfile
+++ b/dockerfiles/mysql/Dockerfile
@@ -4,4 +4,5 @@ ENV MYSQL_DATABASE travel_db
 # Add the content of the sql-scripts/ directory to your image
 # All scripts in docker-entrypoint-initdb.d/ are automatically
 # executed during container startup
-COPY ./sql-scripts/ /docker-entrypoint-initdb.d/
+
+#COPY ./sql-scripts/ /docker-entrypoint-initdb.d/
